# chiaki-ng

./: .appveyor.yml  .gitignore  .gitmodules  404.html  CMakeLists.txt  CONTRIBUTOR_GUIDE.md  Dockerfile  README.md  index.html  meson.ini  mkdocs.yml  sitemap.xml  vcpkg.json
.builds/: android.yml  common.yml  freebsd.yml  openbsd.yml
.github/: copilot-instructions.md  funding.yml
android/: build.gradle  gradle.properties
cli/: CMakeLists.txt
cli/src/: main.c  (+2 more)
cmake/: FindCURL.cmake  FindFFMPEG.cmake  FindMINIUPNPC.cmake  FindOpenSSL.cmake  FindSDL2.cmake  FindSpeexDSP.cmake  JsoncExternalProject.cmake  MiniupnpcExternalProject.cmake  OpenSSLExternalProject.cmake  switch.cmake
doc/: 71-chiaki4deck.rules  platform-build.md  release_notes.md
docs/: index.md
gui/: CMakeLists.txt  MacOSXBundleInfo.plist.in  chiaki.desktop  chiaki.icns  chiaki4deck.desktop  chiaki4deck.icns  chiaki4deck.rc  chiaking.desktop  chiaking.icns  chiaking.rc  chiaking.rc.in  cmake_install.cmake  entitlements.xml  io.github.streetpea.Chiaki4deck.appdata.xml  re.chiaki.Chiaki.appdata.xml  re.chiaki.Chiaki4deck.appdata.xml
gui/include/: artworkdialog.h  autoconnecthelper.h  avopenglframeuploader.h  avopenglwidget.h  avplaceboframeuploader.h  avplacebowidget.h  avwidget.h  controllermanager.h  crc.h  discoverymanager.h  host.h  imageloader.h  jsonrequester.h  jsonutils.h  logsniffer.h  macMicPermission.h  macWakeSleep.h  mainwindow.h  psnaccountid.h  psnlogindialog.h  psnloginwindow.h  psntoken.h  qmlbackend.h  qmlcontroller.h  qmlmainwindow.h  qmlsettings.h  qmlsvgprovider.h  registdialog.h  sdinput.json  sdinputcontext.h  servericonwidget.h  serveritemwidget.h  sessionlog.h  settings.h  settingsdialog.h  sgdbartworkwidget.h  sgdbenums.h  shortcutdialog.h  steamgriddbapi.h  steamshortcutentry.h  (+9 more)
gui/res/: discover_wakeup.tmpl  launch.tmpl  local.tmpl  ps4_external.tmpl  ps5_external.tmpl  resources.qrc  shortcut.tmpl
gui/res/shaders/: FSR.glsl  FSRCNNX_x2_16-0-4-1.glsl  FSRCNNX_x2_8-0-4-1.glsl
gui/src/: artworkdialog.cpp  avopenglframeuploader.cpp  avopenglwidget.cpp  avplaceboframeuploader.cpp  avplacebowidget.cpp  controllermanager.cpp  crc.c  discoverymanager.cpp  host.cpp  imageloader.cpp  jsonrequester.cpp  macMicPermission.m  macWakeSleep.cpp  main.cpp  mainwindow.cpp  manualhostdialog.cpp  psnaccountid.cpp  psnlogindialog.cpp  psnloginwindow.cpp  psntoken.cpp  qmlbackend.cpp  qmlcontroller.cpp  qmlmainwindow.cpp  qmlsettings.cpp  qmlsvgprovider.cpp  registdialog.cpp  sdinputcontext.cpp  servericonwidget.cpp  serveritemwidget.cpp  sessionlog.cpp  settings.cpp  settingsdialog.cpp  settingskeycapturedialog.cpp  sgdbartworkwidget.cpp  shortcutdialog.cpp  steamgriddbapi.cpp  steamshortcutentry.cpp  steamshortcutparser.cpp  steamtools.cpp  streamsession.cpp  (+4 more)
gui/src/qml/: AutoConnectView.qml  ConfirmDialog.qml  ConsolePinDialog.qml  ControllerMappingDialog.qml  DialogView.qml  DisplaySettingsDialog.qml  Main.qml  MainView.qml  ManualHostDialog.qml  PSNLoginDialog.qml  PSNTokenDialog.qml  PlaceboColorMappingDialog.qml  PlaceboSettingsDialog.qml  ProfileDialog.qml  PsnView.qml  RegistDialog.qml  RemindDialog.qml  SettingsDialog.qml  SteamShortcutDialog.qml  StreamMenuWindow.qml  StreamView.qml  qml.qrc  qtquickcontrols2.conf
gui/src/qml/controls/: Button.qml  CheckBox.qml  ComboBox.qml  RadioButton.qml  Slider.qml  TextField.qml
gui/ui/: artworkdialog.ui  shortcutdialog.ui  ui_shortcutdialog.h
javascripts/: mathjax.js
lib/: CMakeLists.txt  config.h.in
lib/include/chiaki/: audio.h  audioreceiver.h  audiosender.h  bitstream.h  common.h  congestioncontrol.h  controller.h  ctrl.h  discovery.h  discoveryservice.h  fec.h  feedback.h  feedbacksender.h  ffmpegdecoder.h  gkcrypt.h  http.h  launchspec.h  log.h  opusencoder.h  orientation.h  regist.h  rpcrypt.h  senkusha.h  session.h  sock.h  stoppipe.h  streamconnection.h  takion.h  thread.h  videoreceiver.h  vl_rbsp.h
lib/include/chiaki/remote/: holepunch.h  rudp.h  rudpsendbuffer.h
lib/protobuf/: CMakeLists.txt  takion.proto
lib/src/: audio.c  audioreceiver.c  audiosender.c  base64.c  bitstream.c  common.c  congestioncontrol.c  controller.c  ctrl.c  discovery.c  discoveryservice.c  ecdh.c  fec.c  feedback.c  feedbacksender.c  ffmpegdecoder.c  frameprocessor.c  gkcrypt.c  http.c  launchspec.c  log.c  opusdecoder.c  opusencoder.c  orientation.c  packetstats.c  pb_utils.h  pidecoder.c  random.c  regist.c  reorderqueue.c  rpcrypt.c  senkusha.c  session.c  session_setters.c  stoppipe.c  streamconnection.c  takion.c  takionsendbuffer.c  thread.c  utils.h  (+2 more)
lib/src/remote/: holepunch-test.c  holepunch.c  rudp.c  rudpsendbuffer.c  stun.h
overrides/: main.html
print_page/: index.html
scripts/: Dockerfile.bionic  Dockerfile.bullseye  Dockerfile.focal  Dockerfile.jammy  Dockerfile.qt6  Dockerfile.xenial  appimage-gen-launcher.sh  appveyor-win.sh  build-appimage.sh  build-common.sh  build-compatibility-appimage.sh  build-ffmpeg-windows.sh  build-ffmpeg.sh  build-hidapi.sh  build-libplacebo-windows-arm.sh  build-libplacebo-windows.sh  build-libplacebo.sh  build-sdl2-compat.sh  build-sdl2.sh  build-small-appimage.sh  build-v4l2.sh  chiaki-ng.iss  chiaki-ng.rb  deploy-windows-msys2.sh  fetch-protoc.sh  gen-launcher.sh  kitware-archive-latest.asc  ps_stream_recorder.py  qtwebengine_import.qml  run-docker-build-appimage.sh  run-podman-build-appimage.sh  run-podman-build-bullseye.sh  run-podman-build-compatibility-appimage.sh
search/: search_index.json
setsu/: CMakeLists.txt
setsu/cmake/: FindEvdev.cmake  FindUdev.cmake
setsu/demo/: motion.c  touchpad.c
setsu/include/: setsu.h
setsu/src/: setsu.c
setup/: index.html
steamdeck_native/: CMakeLists.txt
steamdeck_native/cmake/: FindHIDAPI.cmake
steamdeck_native/demo/: sdeck_haptic.c  sdeck_motion.c
steamdeck_native/hid_info/: hid_report.txt
steamdeck_native/include/: sdeck.h
steamdeck_native/src/: sdeck.c  sdeck_test.c
switch/: CMakeLists.txt  README.md
test/: CMakeLists.txt  bitstream.c  ffmpegdecoder.c  main.c  regist.c  reorderqueue.c  rpcrypt.c
updates/: index.html
(+190 files in other folders)
